Wed Jan 30 17:15:49 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* installdir/synonyms: Updated with the version contributed by
	David Adams, with minor changes.  Kept old one as synonyms.original.

Wed Jan 30 16:39:51 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* installdir/english.0: Changed lots more dubious uses of suffixes to
	get more appropriate and correct fuzzy endings expansions.

Wed Jan 30 12:30:16 2002  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/Connection.cc (connect): Fixed bug with allow_EINTR and
	add support for looping when the connection returns EAGAIN (no
	more free local ports). Thanks to Ahmon Dancy <dancy@franz.com>
	for pointing out the EAGAIN issue.

Tue Jan 29 09:59:58 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/FAQ.html: Updated with today's changes to maindocs FAQ.

Mon Jan 28 16:54:15 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/README: Added mentions of examples & xmlsearch, fixed typo.

Sun Jan 27 23:13:11 2002  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdoc/*.html: Final batch of documentation updates.

Sat Jan 26 23:28:25 2002  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdoc/*: More documentation updates from merging with the
	current maindocs CVS.

Fri Jan 25 21:36:21 2002  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* acconfig.h, include/htconfig.h.in: Add USE_RX to potential
	configure #include macros.

	* htlib/gregex.h: Rename regex.h to prevent conflicts with system
	version.
	
	* htlib/regex.c, htlib/HtRegex.h: Ditto.

	* htfuzzy/EndingsDB.cc: Use same tests as HtRegex.h for rxposix.h,
	gregex.h or regex.h depending on configure results.
	
	* configure.in: Implement more flexible test for rx/regex, which
	will check for rxposix.h if --with-rx is supplied, will "fall
	back" to regex test if rxposix.h isn't available and will only use
	the htlib/ code and header for regex compile.

	* configure: Update using autoconf.
